[metadata]
name = nbcap
version = attr: nbcap.VERSION
description = A package that creates a virtual display and records visual output of a piece of code using ffmpeg, optionally embedding it in the notebook: either as a whole or in chunks.
long_description = file: README.md
keywords = record video, capture output, notebook, jupyter, colab
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
author = Michal Gregor

[options]
zip_safe = False
include_package_data = True
packages = find:
;scripts =
;  bin/first.py
;  bin/second.py
install_requires =
   numpy
   pyvirtualdisplay

[options.package_data]
* = *.txt, *.rst
;hello = *.msg

;[options.packages.find]
;exclude =
;    src.subpackage1
;    src.subpackage2
